Search concept using grpc